gcc/testsuite/gm2/pim/fail/badparamtype.mod
MODULE badparamtype ;  

PROCEDURE foo (i: INTEGER) ;
BEGIN
   
END foo ;

BEGIN
   foo (3.14)
END badparamtype.
